# gbfs-api

./: .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.github/workflows/: test.yml
src/: app.py
src/citybikes/: db.py  types.py
src/citybikes/cmd/: __main__.py  migrate.py  seed.py  srv.py  subscriber.py
src/citybikes/db/: __init__.py  asyncio.py  cbd.py  types.py
src/citybikes/db/migrations/: 0001_init.sql  0002_add_idx.sql  0003_add_vehicles.sql
src/citybikes/gbfs/: api.py  app.py  base_api.py  constants.py  pages.py  types.py
src/citybikes/gbfs/versions/: v2.py  v3.py
src/citybikes/gbfs/versions/v2/: api.py  types.py
src/citybikes/gbfs/versions/v3/: api.py  types.py
tests/: conftest.py  test_api.py
tests/fixtures/: test_data.sql
