[project]
name = "citybikes-gbfs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "pydantic>=2.10.6",
    "starlette>=0.45.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
hyper = [
    "citybikes-hyper",
]

dev = [
    "jsonschema>=4.23.0",
    "pytest-asyncio>=0.25.3",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"

[tool.uv.sources]
citybikes-hyper = { git = "https://github.com/citybikes/hyper" }
